--- a/config.org
+++ b/config.org
@@ -1002,8 +1002,7 @@ Todo: Write "sired" or "sidered" :D
     (setq ivy-rich--display-transformers-list
           '(ivy-switch-buffer
             (:columns
-             ((ivy-rich-switch-buffer-icon :width 2)
-              (ivy-rich-candidate (:width 30))
+             ((ivy-rich-candidate (:width 30))
               (ivy-rich-switch-buffer-size (:width 7))
               (ivy-rich-switch-buffer-indicators (:width 4 :face error :align right))
               (ivy-rich-switch-buffer-major-mode (:width 12 :face warning))
@@ -1040,14 +1039,6 @@ Todo: Write "sired" or "sidered" :D
 
     (ivy-rich-mode 1)
     )
-
-  (defun ivy-rich-switch-buffer-icon (candidate)
-    (with-current-buffer
-        (get-buffer candidate)
-      (let ((icon (all-the-icons-icon-for-mode major-mode)))
-        (if (symbolp icon)
-            (all-the-icons-icon-for-mode 'fundamental-mode)
-          icon))))
 #+end_src
 
 ** Projectile
