--- a/config.org
+++ b/config.org
@@ -1427,6 +1427,13 @@ Uses =C-j= to expand by default
   (add-hook 'css-mode-hook  'emmet-mode) ;; enable Emmet's css abbreviation.)
   )
 #+END_SRC
+** Zeal
+Requires =yay zeal=
+#+BEGIN_SRC emacs-lisp
+(use-package zeal-at-point
+  :ensure t
+  )
+#+END_SRC
 * Keybindings 
 #+begin_src emacs-lisp
 ;;(global-set-key (kbd "<escape>")      'keyboard-escape-quit) ;; send quit signal with escape
@@ -1491,6 +1498,7 @@ Uses =C-j= to expand by default
  "as" '(ispell-word :which-key "spell check")
  "ao" '(occur :which-key "occur") ;; example usage function\|var
  "ad" 'dired
+ "az" '(zeal-at-point-search :which-key "Zeal Docs") ;; example usage function\|var
 
  ;; Buffer
  "b" '(:ignore t :which-key "Buffer")
