--- a/config.org
+++ b/config.org
@@ -365,8 +365,8 @@ Other functions
 
 (defun setup-tide-mode ()
   (interactive)
-  (setq tide-node-executable "/home/chinchi/.nvm/versions/node/v9.0.0/bin/node")
-  (setq tide-tsserver-executable (expand-file-name tide--tsserver tide-tsserver-directory))
+  ;; (setq tide-node-executable "/home/eoshiru/.nvm/versions/node/v9.0.0/bin/node")
+  ;; (setq tide-tsserver-executable (expand-file-name tide--tsserver tide-tsserver-directory))
   (tide-setup)
   (flycheck-mode +1)
   (setq flycheck-check-syntax-automatically '(save mode-enabled))
@@ -1124,8 +1124,10 @@ Display horizontal lines instead of ugly characters
       :defer t
       :config
       ;(setq company-backends (mapcar #'company-mode/backend-with-yas company-backends))
-      (setq company-backends company-backends)
+      ;(setq company-backends company-backends)
+      (setq company-minimum-prefix-length 2)
       (setq company-idle-delay 0.2)
+      (add-to-list 'company-backends 'company-tern)
       (add-hook 'company-mode-hook 'company-quickhelp-mode)
       (setq company-dabbrev-downcase nil)
       ;(yas-reload-all)
@@ -1663,34 +1665,109 @@ Keybindings for outline mode:
   (setq web-mode-markup-indent-offset 2) ; web-mode, html tag in html file
   (setq web-mode-css-indent-offset 2)    ; web-mode, css in html file
   (setq web-mode-code-indent-offset 2) ; web-mode, js code in html file
-  ())
-(add-to-list 'auto-mode-alist '("\\.vue" . web-mode))
+  (general-define-key
+   :states 'normal
+   :keymaps 'web-mode-map
+   "%" 'web-mode-tag-match
+   )
+  (general-define-key
+   :states '(normal motion)
+   :keymaps 'web-mode-map
+   :prefix "SPC"
+   "m" '(:ignore t :which-key "Major Mode[Web]")
+   "me" '(web-mode-dom-errors-show :which-key "Show DOM errors")
+   )
+  )
+(add-to-list 'auto-mode-alist '("\\.vue" . web-mode)
+(add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode)))
+
+
+;; (defun my-web-mode-hook ()
+;;   "Hooks for Web mode."
+;;   (setq web-mode-markup-indent-offset 2)
+;; )
+;; (add-hook 'web-mode-hook  'my-web-mode-hook)
 #+end_src
 
 * Languages
 ** JavaScript
-
+Requires =sudo npm install -g tern=
 #+begin_src emacs-lisp
 (use-package company-tern :ensure t
   :defer t
   :after company
   :config
-(setenv "PATH" (concat (getenv "PATH") ":~/.node_modules/bin"))
-    (setq exec-path (append exec-path '("~/.node_modules/bin")))
+  (setenv "PATH" (concat (getenv "PATH") ":~/.node_modules/bin"))
+  (setq exec-path (append exec-path '("~/.node_modules/bin")))
   (add-to-list 'company-backends 'company-tern)
-(define-key tern-mode-keymap (kbd "M-.") nil)
-(define-key tern-mode-keymap (kbd "M-,") nil)
-)
+  (define-key tern-mode-keymap (kbd "M-.") nil)
+  (define-key tern-mode-keymap (kbd "M-,") nil)
+  )
 
+;; "Vanilla" JS Setup
+;; (add-hook 'js2-mode-hook (lambda ()
+;;                            (use-package js-comint :ensure t
+;;                              :config 
+;;                              (general-define-key
+;;                               :states '(normal motion)
+;;                               :keymaps 'js2-mode-map
+;;                               :prefix "SPC"
+;;                               "m" '(:ignore t :which-key "Major Mode[JS]")
+;;                               "mr" '(js-comint-repl :which-key "JS REPL")
+;;                               ))
+;;                            (tern-mode)
+;;                            (company-mode)))
+
+;; JS Setup via Tide (supports DOM Apis etc)
+;; (add-hook 'js2-mode-hook #'setup-tide-mode)
+(add-hook 'js-jsx-mode-hook (lambda ()
+                           (setup-tide-mode)
+                           (general-define-key
+                            :states '(normal motion)
+                            :keymaps 'js-jsx-mode-map
+                            :prefix "SPC"
+                            "m" '(:ignore t :which-key "Major Mode[JS]")
+                            "mr" '(js-comint-repl :which-key "JS REPL")
+                            )
+                           (general-define-key
+                            :states 'normal
+                            :keymaps 'js-jsx-mode-map
+                            "gd" 'tide-jump-to-definition
+                            "gr" 'tide-references
+                            )
+                           (general-define-key
+                            :states 'normal
+                            :keymaps 'tide-references-mode-map
+                            "RET" 'tide-goto-reference
+                            )
+                           ))
 (add-hook 'js2-mode-hook (lambda ()
-                           (tern-mode)
-                           (company-mode)))
+                           (setup-tide-mode)
+                           (general-define-key
+                            :states '(normal motion)
+                            :keymaps 'js2-mode-map
+                            :prefix "SPC"
+                            "m" '(:ignore t :which-key "Major Mode[JS]")
+                            "mr" '(js-comint-repl :which-key "JS REPL")
+                            )
+                           (general-define-key
+                            :states 'normal
+                            :keymaps 'js2-mode-map
+                            "gd" 'tide-jump-to-definition
+                            "gr" 'tide-references
+                            )
+                           (general-define-key
+                            :states 'normal
+                            :keymaps 'tide-references-mode-map
+                            "RET" 'tide-goto-reference
+                            )
+                           ))
 
 
 (use-package js2-mode :ensure t
   :defer t
   :config
-  (add-to-list 'auto-mode-alist '("\\.js\\'" . js2-mode))
+  ;; (add-to-list 'auto-mode-alist '("\\.js\\'" . js2-mode))
   )
 
 (setq javascript-indent-level 2) ; javascript-mode
@@ -1698,6 +1775,7 @@ Keybindings for outline mode:
 (setq js2-basic-offset 2) ; js2-mode, in latest js2-mode, it's alias of js-indent-level
 ;;(setq tide-basic-offset 2) ;
 
+(add-to-list 'auto-mode-alist '("\\.js\\'" . js2-mode))
 #+end_src
 ** Typescript
 
@@ -1946,6 +2024,8 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
 ;; (advice-add 'google-translate--search-tkk :override
 ;;               (lambda () (list 430675 2721866130)))
 ;;   )
+
+
 #+end_src
 * Experimental
 ** Testing
