--- a/config.org
+++ b/config.org
@@ -1382,13 +1382,13 @@ Keybindings for outline mode:
 #+begin_src emacs-lisp
 (use-package web-mode :ensure t
   :defer t
-  :config
+  :init
   (setq web-mode-markup-indent-offset 2) ; web-mode, html tag in html file
   (setq web-mode-css-indent-offset 2)    ; web-mode, css in html file
   (setq web-mode-code-indent-offset 2) ; web-mode, js code in html file
   (add-to-list 'auto-mode-alist '("\\.vue" . web-mode))
   (add-to-list 'auto-mode-alist '("\\.json" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode))
+  (add-to-list 'auto-mode-alist '("\\.html" . web-mode))
 
   (general-define-key
    :states 'normal
