--- a/config.org
+++ b/config.org
@@ -1207,6 +1207,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
 ;;(global-set-key (kbd "<escape>")      'keyboard-escape-quit) ;; send quit signal with escape
 ;;(global-set-key (kbd "<escape>")      'keyboard-quit) ;; send quit signal with escape
 (define-key key-translation-map (kbd "ESC") (kbd "C-g"))
+; Todo fix for transient-mode-map - >'transient-quit-one
 
 ;;(global-unset-key (kbd "SPC")) ;; hinders insertion of space in ins mode
 (global-unset-key [f2])
